# evan-hwang.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.html  index.md  posts.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: feynman-preview.md  feynman-publish.md  publish-preview.md  publish-today.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore-request.md  feature_request.md  refactor-suggestion.md
.github/workflows/: pages.yml
_layouts/: home.html
_posts/: 2026-02-03-daily-learning.md
config/: com.recoblog.daily.plist
docs/: index.md
docs/ai/: index.md
docs/devops/: index.md
docs/feynman-studies/: 2026-03-03-feynman-claude-code-skills.md  2026-03-04-keda-deep-dive-part-1.md
docs/kubernetes/: index.md
docs/learning-records/: 2026-02-03-daily-learning.md  2026-02-06-daily-learning.md  index.md
docs/python/: index.md
scripts/: __init__.py  collect_conversations.py  generate_blog_post.py  publish.py  setup_launchd.sh
